.metadata/.plugins/org.eclipse.cdt.ui/pzem.build.log
22:11:58 **** Incremental Build of configuration Debug for project pzem ****
make -j18 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F303xE -c -I../Core/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:97:3: warning: implicit declaration of function 'Debug_Print' [-Wimplicit-function-declaration]
   97 |   Debug_Print("PZEM test start\r\n");
      |   ^~~~~~~~~~~
In file included from ../Core/Src/main.c:101:
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdio.h:691:22: error: invalid storage class for function '__sputc_r'
  691 | _ELIDABLE_INLINE int __sputc_r(struct _reent *_ptr, int _c, FILE *_p) {
      |                      ^~~~~~~~~
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdio.h:746:1: error: invalid storage class for function '_getchar_unlocked'
  746 | _getchar_unlocked(void)
      | ^~~~~~~~~~~~~~~~~
C:\ST\STM32CubeIDE_1.19.0\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.13.3.rel1.win32_1.0.0.202411081344\tools\bin/../lib/gcc/arm-none-eabi/13.3.1/../../../../arm-none-eabi/include/stdio.h:755:1: error: invalid storage class for function '_putchar_unlocked'
  755 | _putchar_unlocked(int _c)
      | ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:110:6: warning: conflicting types for 'Debug_Print'; have 'void(char *)'
  110 | void Debug_Print(char *msg)
      |      ^~~~~~~~~~~
../Core/Src/main.c:110:6: error: static declaration of 'Debug_Print' follows non-static declaration
../Core/Src/main.c:97:3: note: previous implicit declaration of 'Debug_Print' with type 'void(char *)'
   97 |   Debug_Print("PZEM test start\r\n");
      |   ^~~~~~~~~~~
../Core/Src/main.c:115:5: warning: 'main' is normally a non-static function [-Wmain]
  115 | int main(void)
      |     ^~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:115:5: warning: 'main' defined but not used [-Wunused-function]
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j18 all" terminated with exit code 2. Build might be incomplete.

22:12:00 Build Failed. 5 errors, 4 warnings. (took 2s.24ms)

